// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme to Variables generate darkTheme CSS variables 1`] = `
{
  "--palette-action-alternate-danger-active": "#ff382214",
  "--palette-action-alternate-danger-disabled": "#00000014",
  "--palette-action-alternate-danger-focus": "#ff382214",
  "--palette-action-alternate-danger-hover": "#ff382229",
  "--palette-action-alternate-danger-selected": "#ff38223d",
  "--palette-action-alternate-primary-active": "#1890ff14",
  "--palette-action-alternate-primary-disabled": "#00000014",
  "--palette-action-alternate-primary-focus": "#1890ff14",
  "--palette-action-alternate-primary-hover": "#1890ff29",
  "--palette-action-alternate-primary-selected": "#1890ff3d",
  "--palette-action-alternate-secondary-active": "#0000000a",
  "--palette-action-alternate-secondary-disabled": "#0000000a",
  "--palette-action-alternate-secondary-focus": "#0000000a",
  "--palette-action-alternate-secondary-hover": "#00000014",
  "--palette-action-alternate-secondary-selected": "#00000029",
  "--palette-action-danger-active": "#b91200",
  "--palette-action-danger-disabled": "#e5e5e5",
  "--palette-action-danger-focus": "#b91200",
  "--palette-action-danger-hover": "#ff3822",
  "--palette-action-danger-selected": "#860a00",
  "--palette-action-link-active": "#005dc9",
  "--palette-action-link-disabled": "#e5e5e5",
  "--palette-action-link-focus": "#005dc9",
  "--palette-action-link-hover": "#1890ff",
  "--palette-action-link-selected": "#00448c",
  "--palette-action-primary-active": "#005dc9",
  "--palette-action-primary-contrastText": "#ffffff",
  "--palette-action-primary-disabled": "#e5e5e5",
  "--palette-action-primary-focus": "#005dc9",
  "--palette-action-primary-hover": "#1890ff",
  "--palette-action-primary-selected": "#00448c",
  "--palette-action-secondary-active": "#636363",
  "--palette-action-secondary-disabled": "#e5e5e5",
  "--palette-action-secondary-focus": "#636363",
  "--palette-action-secondary-hover": "#898989",
  "--palette-action-secondary-selected": "#464646",
  "--palette-background-neutral-0": "#cdcdcd",
  "--palette-background-neutral-100": "#e5e5e5",
  "--palette-background-neutral-200": "#f2f2f2",
  "--palette-background-neutral-300": "#f9f9f9",
  "--palette-background-neutral-400": "#ffffff",
  "--palette-background-neutral-500": "#ffffff",
  "--palette-background-neutral-600": "#ffffff",
  "--palette-background-primary-0": "#aad1ff",
  "--palette-background-primary-100": "#d4e7ff",
  "--palette-background-primary-200": "#eaf3ff",
  "--palette-background-primary-300": "#f5faff",
  "--palette-background-primary-400": "#ffffff",
  "--palette-background-primary-500": "#ffffff",
  "--palette-background-primary-600": "#ffffff",
  "--palette-common-black": "#000000",
  "--palette-common-grey-100": "#f2f2f2",
  "--palette-common-grey-200": "#e5e5e5",
  "--palette-common-grey-300": "#cdcdcd",
  "--palette-common-grey-400": "#acacac",
  "--palette-common-grey-50": "#f9f9f9",
  "--palette-common-grey-500": "#898989",
  "--palette-common-grey-600": "#636363",
  "--palette-common-grey-700": "#464646",
  "--palette-common-grey-800": "#2b2b2b",
  "--palette-common-grey-900": "#181818",
  "--palette-common-white": "#ffffff",
  "--palette-error-100": "#ffeeeb",
  "--palette-error-200": "#ffdcd5",
  "--palette-error-300": "#ffb9ad",
  "--palette-error-400": "#ff826e",
  "--palette-error-50": "#fff7f6",
  "--palette-error-500": "#ff3822",
  "--palette-error-600": "#b91200",
  "--palette-error-700": "#860a00",
  "--palette-error-800": "#570400",
  "--palette-error-900": "#350100",
  "--palette-info-100": "#eaf3ff",
  "--palette-info-200": "#d4e7ff",
  "--palette-info-300": "#aad1ff",
  "--palette-info-400": "#6ab0ff",
  "--palette-info-50": "#f5faff",
  "--palette-info-500": "#1890ff",
  "--palette-info-600": "#005dc9",
  "--palette-info-700": "#00448c",
  "--palette-info-800": "#002b55",
  "--palette-info-900": "#001834",
  "--palette-mode": "light",
  "--palette-primary-100": "#eaf3ff",
  "--palette-primary-200": "#d4e7ff",
  "--palette-primary-300": "#aad1ff",
  "--palette-primary-400": "#6ab0ff",
  "--palette-primary-50": "#f5faff",
  "--palette-primary-500": "#1890ff",
  "--palette-primary-600": "#005dc9",
  "--palette-primary-700": "#00448c",
  "--palette-primary-800": "#002b55",
  "--palette-primary-900": "#001834",
  "--palette-secondary-100": "#f2f2f2",
  "--palette-secondary-200": "#e5e5e5",
  "--palette-secondary-300": "#cdcdcd",
  "--palette-secondary-400": "#acacac",
  "--palette-secondary-50": "#f9f9f9",
  "--palette-secondary-500": "#898989",
  "--palette-secondary-600": "#636363",
  "--palette-secondary-700": "#464646",
  "--palette-secondary-800": "#2b2b2b",
  "--palette-secondary-900": "#181818",
  "--palette-success-100": "#52c41a",
  "--palette-success-200": "#52c41a",
  "--palette-success-300": "#52c41a",
  "--palette-success-400": "#52c41a",
  "--palette-success-50": "#52c41a",
  "--palette-success-500": "#52c41a",
  "--palette-success-600": "#52c41a",
  "--palette-success-700": "#52c41a",
  "--palette-success-800": "#52c41a",
  "--palette-success-900": "#52c41a",
  "--palette-warning-100": "#ff9933",
  "--palette-warning-200": "#ff9933",
  "--palette-warning-300": "#ff9933",
  "--palette-warning-400": "#ff9933",
  "--palette-warning-50": "#ff9933",
  "--palette-warning-500": "#ff9933",
  "--palette-warning-600": "#ff9933",
  "--palette-warning-700": "#ff9933",
  "--palette-warning-800": "#ff9933",
  "--palette-warning-900": "#ff9933",
  "--shape-border-radius-lg": "8px",
  "--shape-border-radius-md": "4px",
  "--shape-border-radius-sm": "2px",
  "--shape-border-radius-xl": "16px",
  "--shape-border-radius-xs": "1px",
  "--shape-border-width-lg": "8px",
  "--shape-border-width-md": "4px",
  "--shape-border-width-sm": "2px",
  "--shape-border-width-xl": "8px",
  "--shape-border-width-xs": "1px",
  "--shape-size-2xl": "48px",
  "--shape-size-2xs": "2px",
  "--shape-size-3xl": "64px",
  "--shape-size-3xs": "1px",
  "--shape-size-lg": "24px",
  "--shape-size-md": "16px",
  "--shape-size-sm": "8px",
  "--shape-size-xl": "32px",
  "--shape-size-xs": "4px",
  "--spacing-gap-2xl": "32px",
  "--spacing-gap-lg": "16px",
  "--spacing-gap-md": "12px",
  "--spacing-gap-sm": "8px",
  "--spacing-gap-xl": "24px",
  "--spacing-gap-xs": "4px",
  "--spacing-margin-2xl": "32px",
  "--spacing-margin-lg": "16px",
  "--spacing-margin-md": "12px",
  "--spacing-margin-sm": "8px",
  "--spacing-margin-xl": "24px",
  "--spacing-margin-xs": "4px",
  "--spacing-padding-2xl": "32px",
  "--spacing-padding-lg": "16px",
  "--spacing-padding-md": "12px",
  "--spacing-padding-sm": "8px",
  "--spacing-padding-xl": "24px",
  "--spacing-padding-xs": "4px",
  "--typography-action-fontFamily": "Inter",
  "--typography-action-fontSize": "14px",
  "--typography-action-fontWeight": 400,
  "--typography-action-lineHeight": "16px",
  "--typography-bodyL-fontFamily": "Inter",
  "--typography-bodyL-fontSize": "18px",
  "--typography-bodyL-fontWeight": 400,
  "--typography-bodyL-lineHeight": "24px",
  "--typography-bodyLBold-fontFamily": "Inter",
  "--typography-bodyLBold-fontSize": "16px",
  "--typography-bodyLBold-fontWeight": 600,
  "--typography-bodyLBold-lineHeight": "24px",
  "--typography-bodyM-fontFamily": "Inter",
  "--typography-bodyM-fontSize": "16px",
  "--typography-bodyM-fontWeight": 400,
  "--typography-bodyM-lineHeight": "24px",
  "--typography-bodyMBold-fontFamily": "Inter",
  "--typography-bodyMBold-fontSize": "16px",
  "--typography-bodyMBold-fontWeight": 600,
  "--typography-bodyMBold-lineHeight": "24px",
  "--typography-bodyS-fontFamily": "Inter",
  "--typography-bodyS-fontSize": "14px",
  "--typography-bodyS-fontWeight": 400,
  "--typography-bodyS-lineHeight": "16px",
  "--typography-bodySBold-fontFamily": "Inter",
  "--typography-bodySBold-fontSize": "14px",
  "--typography-bodySBold-fontWeight": 600,
  "--typography-bodySBold-lineHeight": "16px",
  "--typography-caption-fontFamily": "Inter",
  "--typography-caption-fontSize": "12px",
  "--typography-caption-fontWeight": 400,
  "--typography-caption-lineHeight": "12px",
  "--typography-code-fontFamily": "Menlo",
  "--typography-code-fontSize": "14px",
  "--typography-code-fontWeight": 400,
  "--typography-code-lineHeight": "24px",
  "--typography-h1-fontFamily": "Inter",
  "--typography-h1-fontSize": "24px",
  "--typography-h1-fontWeight": 600,
  "--typography-h1-lineHeight": "32px",
  "--typography-h2-fontFamily": "Inter",
  "--typography-h2-fontSize": "20px",
  "--typography-h2-fontWeight": 600,
  "--typography-h2-lineHeight": "32px",
  "--typography-h3-fontFamily": "Inter",
  "--typography-h3-fontSize": "18px",
  "--typography-h3-fontWeight": 600,
  "--typography-h3-lineHeight": "24px",
  "--typography-h4-fontFamily": "Inter",
  "--typography-h4-fontSize": "16px",
  "--typography-h4-fontWeight": 600,
  "--typography-h4-lineHeight": "24px",
  "--typography-link-fontFamily": "Inter",
  "--typography-link-fontSize": "14px",
  "--typography-link-fontWeight": 400,
  "--typography-link-lineHeight": "16px",
  "--typography-link-textDecoration": "underline",
}
`;

exports[`Theme to Variables generate empty theme CSS variables 1`] = `{}`;

exports[`Theme to Variables generate lightTheme CSS variables 1`] = `
{
  "--palette-action-alternate-danger-active": "#ff544f14",
  "--palette-action-alternate-danger-disabled": "#00000014",
  "--palette-action-alternate-danger-focus": "#ff544f14",
  "--palette-action-alternate-danger-hover": "#ff544f29",
  "--palette-action-alternate-danger-selected": "#ff544f3d",
  "--palette-action-alternate-primary-active": "#1890ff14",
  "--palette-action-alternate-primary-disabled": "#00000014",
  "--palette-action-alternate-primary-focus": "#1890ff14",
  "--palette-action-alternate-primary-hover": "#1890ff29",
  "--palette-action-alternate-primary-selected": "#1890ff3d",
  "--palette-action-alternate-secondary-active": "#0000000a",
  "--palette-action-alternate-secondary-disabled": "#0000000a",
  "--palette-action-alternate-secondary-focus": "#0000000a",
  "--palette-action-alternate-secondary-hover": "#00000014",
  "--palette-action-alternate-secondary-selected": "#00000029",
  "--palette-action-danger-active": "#e50020",
  "--palette-action-danger-disabled": "#e5e5e5",
  "--palette-action-danger-focus": "#e50020",
  "--palette-action-danger-hover": "#ff544f",
  "--palette-action-danger-selected": "#a80014",
  "--palette-action-link-active": "#005dc9",
  "--palette-action-link-disabled": "#e5e5e5",
  "--palette-action-link-focus": "#005dc9",
  "--palette-action-link-hover": "#1890ff",
  "--palette-action-link-selected": "#00448c",
  "--palette-action-primary-active": "#005dc9",
  "--palette-action-primary-contrastText": "#ffffff",
  "--palette-action-primary-disabled": "#e5e5e5",
  "--palette-action-primary-focus": "#005dc9",
  "--palette-action-primary-hover": "#1890ff",
  "--palette-action-primary-selected": "#00448c",
  "--palette-action-secondary-active": "#636363",
  "--palette-action-secondary-disabled": "#e5e5e5",
  "--palette-action-secondary-focus": "#636363",
  "--palette-action-secondary-hover": "#898989",
  "--palette-action-secondary-selected": "#464646",
  "--palette-background-neutral-0": "#cdcdcd",
  "--palette-background-neutral-100": "#e5e5e5",
  "--palette-background-neutral-200": "#f2f2f2",
  "--palette-background-neutral-300": "#f9f9f9",
  "--palette-background-neutral-400": "#ffffff",
  "--palette-background-neutral-500": "#ffffff",
  "--palette-background-neutral-600": "#ffffff",
  "--palette-background-primary-0": "#aad1ff",
  "--palette-background-primary-100": "#d4e7ff",
  "--palette-background-primary-200": "#eaf3ff",
  "--palette-background-primary-300": "#f5faff",
  "--palette-background-primary-400": "#ffffff",
  "--palette-background-primary-500": "#ffffff",
  "--palette-background-primary-600": "#ffffff",
  "--palette-common-black": "#000000",
  "--palette-common-grey-100": "#f2f2f2",
  "--palette-common-grey-200": "#e5e5e5",
  "--palette-common-grey-300": "#cdcdcd",
  "--palette-common-grey-400": "#acacac",
  "--palette-common-grey-50": "#f9f9f9",
  "--palette-common-grey-500": "#898989",
  "--palette-common-grey-600": "#636363",
  "--palette-common-grey-700": "#464646",
  "--palette-common-grey-800": "#2b2b2b",
  "--palette-common-grey-900": "#181818",
  "--palette-common-white": "#ffffff",
  "--palette-error-100": "#fdece9",
  "--palette-error-200": "#fdddd8",
  "--palette-error-300": "#ffb9b2",
  "--palette-error-400": "#ff8177",
  "--palette-error-50": "#fff7f6",
  "--palette-error-500": "#ff544f",
  "--palette-error-600": "#e50020",
  "--palette-error-700": "#a80014",
  "--palette-error-800": "#6f0009",
  "--palette-error-900": "#430003",
  "--palette-info-100": "#eaf3ff",
  "--palette-info-200": "#d4e7ff",
  "--palette-info-300": "#aad1ff",
  "--palette-info-400": "#6ab0ff",
  "--palette-info-50": "#f5faff",
  "--palette-info-500": "#1890ff",
  "--palette-info-600": "#005dc9",
  "--palette-info-700": "#00448c",
  "--palette-info-800": "#002b55",
  "--palette-info-900": "#001834",
  "--palette-mode": "light",
  "--palette-primary-100": "#eaf3ff",
  "--palette-primary-200": "#d4e7ff",
  "--palette-primary-300": "#aad1ff",
  "--palette-primary-400": "#6ab0ff",
  "--palette-primary-50": "#f5faff",
  "--palette-primary-500": "#1890ff",
  "--palette-primary-600": "#005dc9",
  "--palette-primary-700": "#00448c",
  "--palette-primary-800": "#002b55",
  "--palette-primary-900": "#001834",
  "--palette-secondary-100": "#f2f2f2",
  "--palette-secondary-200": "#e5e5e5",
  "--palette-secondary-300": "#cdcdcd",
  "--palette-secondary-400": "#acacac",
  "--palette-secondary-50": "#f9f9f9",
  "--palette-secondary-500": "#898989",
  "--palette-secondary-600": "#636363",
  "--palette-secondary-700": "#464646",
  "--palette-secondary-800": "#2b2b2b",
  "--palette-secondary-900": "#181818",
  "--palette-success-100": "#fed8d8",
  "--palette-success-200": "#c8f2bf",
  "--palette-success-300": "#a3e493",
  "--palette-success-400": "#76cf60",
  "--palette-success-50": "#effce9",
  "--palette-success-500": "#4cb61b",
  "--palette-success-600": "#259100",
  "--palette-success-700": "#146d05",
  "--palette-success-800": "#134e07",
  "--palette-success-900": "#032300",
  "--palette-warning-100": "#FFF0B3",
  "--palette-warning-200": "#FFE1A0",
  "--palette-warning-300": "#FFBF69",
  "--palette-warning-400": "#F68F1F",
  "--palette-warning-50": "#FFF8D4",
  "--palette-warning-500": "#DB6B00",
  "--palette-warning-600": "#A44C00",
  "--palette-warning-700": "#723300",
  "--palette-warning-800": "#532300",
  "--palette-warning-900": "#361400",
  "--shape-border-radius-lg": "8px",
  "--shape-border-radius-md": "4px",
  "--shape-border-radius-sm": "2px",
  "--shape-border-radius-xl": "16px",
  "--shape-border-radius-xs": "1px",
  "--shape-border-width-lg": "8px",
  "--shape-border-width-md": "4px",
  "--shape-border-width-sm": "2px",
  "--shape-border-width-xl": "8px",
  "--shape-border-width-xs": "1px",
  "--shape-size-2xl": "48px",
  "--shape-size-2xs": "2px",
  "--shape-size-3xl": "64px",
  "--shape-size-3xs": "1px",
  "--shape-size-lg": "24px",
  "--shape-size-md": "16px",
  "--shape-size-sm": "8px",
  "--shape-size-xl": "32px",
  "--shape-size-xs": "4px",
  "--spacing-gap-2xl": "32px",
  "--spacing-gap-lg": "16px",
  "--spacing-gap-md": "12px",
  "--spacing-gap-sm": "8px",
  "--spacing-gap-xl": "24px",
  "--spacing-gap-xs": "4px",
  "--spacing-margin-2xl": "32px",
  "--spacing-margin-lg": "16px",
  "--spacing-margin-md": "12px",
  "--spacing-margin-sm": "8px",
  "--spacing-margin-xl": "24px",
  "--spacing-margin-xs": "4px",
  "--spacing-padding-2xl": "32px",
  "--spacing-padding-lg": "16px",
  "--spacing-padding-md": "12px",
  "--spacing-padding-sm": "8px",
  "--spacing-padding-xl": "24px",
  "--spacing-padding-xs": "4px",
  "--typography-action-fontFamily": "Inter",
  "--typography-action-fontSize": "14px",
  "--typography-action-fontWeight": 400,
  "--typography-action-lineHeight": "16px",
  "--typography-bodyL-fontFamily": "Inter",
  "--typography-bodyL-fontSize": "18px",
  "--typography-bodyL-fontWeight": 400,
  "--typography-bodyL-lineHeight": "24px",
  "--typography-bodyLBold-fontFamily": "Inter",
  "--typography-bodyLBold-fontSize": "16px",
  "--typography-bodyLBold-fontWeight": 600,
  "--typography-bodyLBold-lineHeight": "24px",
  "--typography-bodyM-fontFamily": "Inter",
  "--typography-bodyM-fontSize": "16px",
  "--typography-bodyM-fontWeight": 400,
  "--typography-bodyM-lineHeight": "24px",
  "--typography-bodyMBold-fontFamily": "Inter",
  "--typography-bodyMBold-fontSize": "16px",
  "--typography-bodyMBold-fontWeight": 600,
  "--typography-bodyMBold-lineHeight": "24px",
  "--typography-bodyS-fontFamily": "Inter",
  "--typography-bodyS-fontSize": "14px",
  "--typography-bodyS-fontWeight": 400,
  "--typography-bodyS-lineHeight": "16px",
  "--typography-bodySBold-fontFamily": "Inter",
  "--typography-bodySBold-fontSize": "14px",
  "--typography-bodySBold-fontWeight": 600,
  "--typography-bodySBold-lineHeight": "16px",
  "--typography-caption-fontFamily": "Inter",
  "--typography-caption-fontSize": "12px",
  "--typography-caption-fontWeight": 400,
  "--typography-caption-lineHeight": "12px",
  "--typography-code-fontFamily": "Menlo",
  "--typography-code-fontSize": "14px",
  "--typography-code-fontWeight": 400,
  "--typography-code-lineHeight": "24px",
  "--typography-h1-fontFamily": "Inter",
  "--typography-h1-fontSize": "24px",
  "--typography-h1-fontWeight": 600,
  "--typography-h1-lineHeight": "32px",
  "--typography-h2-fontFamily": "Inter",
  "--typography-h2-fontSize": "20px",
  "--typography-h2-fontWeight": 600,
  "--typography-h2-lineHeight": "32px",
  "--typography-h3-fontFamily": "Inter",
  "--typography-h3-fontSize": "18px",
  "--typography-h3-fontWeight": 600,
  "--typography-h3-lineHeight": "24px",
  "--typography-h4-fontFamily": "Inter",
  "--typography-h4-fontSize": "16px",
  "--typography-h4-fontWeight": 600,
  "--typography-h4-lineHeight": "24px",
  "--typography-link-fontFamily": "Inter",
  "--typography-link-fontSize": "14px",
  "--typography-link-fontWeight": 400,
  "--typography-link-lineHeight": "16px",
  "--typography-link-textDecoration": "underline",
}
`;
